<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <GridLayout android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/seller1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_row="0"
                android:text="@string/Name1"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="left"
                android:layout_row="1"
                android:capitalize="characters"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/seller2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_row="2"
                android:text="@string/Name2"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="3"
                android:capitalize="characters"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/seller3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_row="4"
                android:text="@string/Name3"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="5"
                android:capitalize="characters"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/seller4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_row="6"
                android:text="@string/Name4"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="7"
                android:capitalize="characters"
                android:textAlignment="center" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Calculer_addition"
                android:id="@+id/button"
                android:layout_row="8"
                android:layout_column="0"
                android:layout_gravity="center_horizontal|bottom" />


        </GridLayout>
    </ScrollView>

</FrameLayout>