<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content">
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Back"
        android:id="@+id/back_button"
        android:layout_row="0"
        android:layout_column="0" />
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2"
        android:layout_gravity="center_horizontal|top"
        android:layout_column="0"
        android:layout_row="1">
    <GridLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1">

        <ImageView
            android:id="@+id/orange_img"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="10dp"
            android:layout_row="0"
            android:background="@drawable/border"
            android:padding="5dp"
            android:src="@mipmap/juice_orange" />

        <ImageView
            android:id="@+id/orange_button"
            android:layout_width="@dimen/clickable_width"
            android:layout_height="@dimen/clickable_height"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="0"
            android:src="@mipmap/blank" />

        <ImageView
            android:id="@+id/tropical_img"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_column="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="7dp"
            android:layout_marginTop="10dp"
            android:layout_row="0"
            android:background="@drawable/border"
            android:padding="5dp"
            android:src="@mipmap/juice_tropical" />

        <ImageView
            android:id="@+id/tropical_button"
            android:layout_width="@dimen/clickable_width"
            android:layout_height="@dimen/clickable_height"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_row="0"
            android:src="@mipmap/blank" />

        <ImageView
            android:id="@+id/world_img"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="5dp"
            android:layout_row="2"
            android:background="@drawable/border"
            android:padding="5dp"
            android:src="@mipmap/juice_worldshake" />

        <ImageView
            android:id="@+id/world_button"
            android:layout_width="@dimen/clickable_width"
            android:layout_height="@dimen/clickable_height"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="2"
            android:src="@mipmap/blank" />

        <ImageView
            android:id="@+id/pomme_img"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="7dp"
            android:layout_marginTop="5dp"
            android:layout_row="2"
            android:background="@drawable/border"
            android:padding="5dp"
            android:src="@mipmap/juice_pomme" />

        <ImageView
            android:id="@+id/pomme_button"
            android:layout_width="@dimen/clickable_width"
            android:layout_height="@dimen/clickable_height"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_row="2"
            android:src="@mipmap/blank" />

        <ImageView
            android:id="@+id/vidange_img"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_column="0"
            android:layout_marginRight="7dp"
            android:layout_marginTop="5dp"
            android:layout_row="5"
            android:background="@drawable/border"
            android:padding="5dp"
            android:src="@mipmap/juice_vidange" />

        <ImageView
            android:id="@+id/vidange_button"
            android:layout_width="@dimen/clickable_width"
            android:layout_height="@dimen/clickable_height"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="5"
            android:src="@mipmap/blank" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom|left"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_marginLeft="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Nbre_orange"
                android:id="@+id/viewNbreOrange"
                android:layout_gravity="bottom|left"
                android:autoText="false"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/viewOrangePlus"
                android:autoText="false"
                android:textStyle="italic"
                android:layout_marginLeft="@dimen/space_plus"
                android:textColor="@color/plusText" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Nbre_tropical"
                android:id="@+id/viewNbreTropical"
                android:layout_gravity="bottom|left"
                android:autoText="false"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/viewTropicalPlus"
                android:autoText="false"
                android:textStyle="italic"
                android:layout_marginLeft="@dimen/space_plus"
                android:textColor="@color/plusText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_row="4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/viewNbreWorld"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoText="false"
                android:text="@string/Nbre_world"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/viewWorldPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_plus"
                android:autoText="false"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/plusText"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:layout_marginLeft="10dp"
            android:layout_row="4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/viewNbrePomme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoText="false"
                android:text="@string/Nbre_pomme"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/viewPommePlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_plus"
                android:autoText="false"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/plusText"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_row="6"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/viewNbreVidange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|left"
                android:autoText="false"
                android:text="@string/Nbre_vidange"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/viewVidangePlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_plus"
                android:autoText="false"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/plusText"
                android:textStyle="italic" />
        </LinearLayout>

        <Space
            android:layout_width="1dp"
            android:layout_height="80dp"
            android:layout_column="0"
            android:layout_row="7" />
    </GridLayout>
</ScrollView>
</GridLayout>