<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Back"
        android:id="@+id/back_button"
        android:layout_row="0"
        android:layout_column="0" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="top|center_horizontal"
        android:layout_row="1">

        <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1">

        <ImageView
            android:id="@+id/nougat_img"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_row="0"
            android:background="@drawable/border"
            android:padding="5dp"
            android:src="@mipmap/barre_nougat" />

        <ImageView
            android:id="@+id/nougat_button"
            android:layout_width="@dimen/clickable_width"
            android:layout_height="@dimen/clickable_height"
            android:layout_alignBottom="@+id/lait_img"
            android:layout_alignStart="@+id/lait_img"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="0"
            android:src="@mipmap/blank" />

        <ImageView
            android:id="@+id/sesame_img"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_column="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="7dp"
            android:layout_marginTop="20dp"
            android:layout_row="0"
            android:background="@drawable/border"
            android:padding="5dp"
            android:src="@mipmap/barre_sesame" />

        <ImageView
            android:id="@+id/sesame_button"
            android:layout_width="@dimen/clickable_width"
            android:layout_height="@dimen/clickable_height"
            android:layout_alignBottom="@+id/lait_img"
            android:layout_alignStart="@+id/lait_img"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_row="0"
            android:src="@mipmap/blank" />

        <LinearLayout
            android:id="@+id/LinearNougat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_row="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/viewNbreNougat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Nbre_nougat"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/viewNougatPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lait_img"
                android:layout_column="0"
                android:layout_marginLeft="@dimen/space_plus"
                android:layout_row="1"
                android:layout_toEndOf="@+id/viewNbreSel"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#40bf2d" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearSesame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="10dp"
            android:layout_row="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/viewNbreSesame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Nbre_sesame"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/viewSesamePlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/viewNbrePaprika"
                android:layout_column="1"
                android:layout_marginLeft="@dimen/space_plus"
                android:layout_row="1"
                android:layout_toEndOf="@+id/viewNbrePaprika"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#40bf2d" />

        </LinearLayout>
    </GridLayout>
</ScrollView>
</GridLayout>