<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Back"
        android:id="@+id/back_button"
        android:layout_row="0"
        android:layout_column="0" />
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2"
        android:layout_gravity="center_horizontal|top"
        android:layout_column="0"
        android:layout_row="1">
    <GridLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1">
        <ImageView
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:id="@+id/noir_img"
            android:src="@mipmap/chocolate_dark"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:padding="5dp"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_gravity="center_horizontal" />

        <ImageView
            android:layout_width="@dimen/clickable_width"
            android:layout_height="@dimen/clickable_height"
            android:id="@+id/noir_button"
            android:src="@mipmap/blank"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_gravity="center" />

        <ImageView
            android:id="@+id/lait_img"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_row="0"
            android:background="@drawable/border"
            android:padding="5dp"
            android:src="@mipmap/chocolate_milk" />

        <ImageView
            android:layout_width="@dimen/clickable_width"
            android:layout_height="@dimen/clickable_height"
            android:id="@+id/lait_button"
            android:src="@mipmap/blank"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_gravity="center" />

        <ImageView
            android:id="@+id/nois_button"
            android:layout_width="@dimen/clickable_width"
            android:layout_height="@dimen/clickable_height"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="2"
            android:src="@mipmap/blank" />

        <ImageView
            android:id="@+id/nois_img"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_row="2"
            android:background="@drawable/border"
            android:padding="5dp"
            android:src="@mipmap/chocolate_nuts" />

        <ImageView
            android:id="@+id/praline_img"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/border"
            android:padding="5dp"
            android:src="@mipmap/chocolate_praline" />

        <ImageView
            android:layout_width="@dimen/clickable_width"
            android:layout_height="@dimen/clickable_height"
            android:id="@+id/praline_button"
            android:src="@mipmap/blank"
            android:layout_column="1"
            android:layout_row="2"
            android:layout_gravity="center" />


        <ImageView
            android:id="@+id/blanc_button"
            android:layout_width="@dimen/clickable_width"
            android:layout_height="@dimen/clickable_height"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="5"
            android:src="@mipmap/blank" />

        <ImageView
            android:id="@+id/blanc_img"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_row="5"
            android:background="@drawable/border"
            android:padding="5dp"
            android:src="@mipmap/chocolate_white" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Nbre_lait"
                android:id="@+id/viewNbreLait"
                android:layout_gravity="bottom|left"
                android:autoText="false"
                android:textStyle="italic"
                android:layout_column="1"
                android:layout_row="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/viewLaitPlus"
                android:layout_gravity="bottom|left"
                android:autoText="false"
                android:textStyle="italic"
                android:layout_column="1"
                android:layout_row="1"
                android:textColor="@color/plusText"
                android:layout_marginLeft="@dimen/space_plus" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_marginLeft="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Nbre_noir"
                android:id="@+id/viewNbreNoir"
                android:autoText="false"
                android:textStyle="italic"
                android:layout_column="0"
                android:layout_row="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/viewNoirPlus"
                android:autoText="false"
                android:textStyle="italic"
                android:layout_column="0"
                android:layout_row="1"
                android:textColor="@color/plusText"
                android:layout_marginLeft="@dimen/space_plus" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Nbre_praline"
                android:id="@+id/viewNbrePraline"
                android:layout_gravity="bottom|left"
                android:autoText="false"
                android:textStyle="italic"
                android:layout_row="3"
                android:layout_column="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/viewPralinePlus"
                android:autoText="false"
                android:textStyle="italic"
                android:layout_column="0"
                android:layout_row="1"
                android:textColor="@color/plusText"
                android:layout_marginLeft="@dimen/space_plus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_row="6"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/viewNbreBlanc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="bottom|left"
                android:layout_row="3"
                android:autoText="false"
                android:text="@string/Nbre_blanc"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/viewBlancPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="@dimen/space_plus"
                android:layout_row="1"
                android:autoText="false"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/plusText"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="4"
            android:layout_marginLeft="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Nbre_noisette"
                android:id="@+id/viewNbreNois"
                android:layout_gravity="bottom|left"
                android:autoText="false"
                android:textStyle="italic"
                android:layout_column="0"
                android:layout_row="3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/viewNoisPlus"
                android:autoText="false"
                android:textStyle="italic"
                android:layout_column="0"
                android:layout_row="1"
                android:textColor="@color/plusText"
                android:layout_marginLeft="@dimen/space_plus" />

        </LinearLayout>

        <Space
            android:layout_width="1dp"
            android:layout_height="80dp"
            android:layout_row="6"
            android:layout_weight="1" />
    </GridLayout>
</ScrollView>
</GridLayout>
